z-index issues

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ a {
     bottom: 100%;
     opacity: 0;
     transition: opacity ease-in-out 0.4s;
-    z-index: 2;
+    z-index: 0;
 	right:0;
 	left:0;
 }
